<resources>
    <string name="app_name">Music Downloader</string>
    <string name="edit_message">Enter URL</string>
    <string name="button_fetch_songs_list">Fetch Songs</string>
    <string name="list_display">Select Songs To Download</string>
    <string name="parsingProgressText">Extracting Songs List</string>
    <string name="validatorProgressText">Validating URL</string>

    <string name="nav_settings_title">Settings</string>
    <string name="action_search">Search</string>
    <string name="nav_source_title">Source Code</string>

    <string name="github_repo">Github Repo</string>

    <string name="artist_info">Artist Info</string>
    <string name="artist_group_id">artist_group_id</string>
    <string name="album_info">Album Info</string>
    <string name="album_group_id">album_group_id</string>
    <string name="test_button_text">Test</string>
    <string name="pref_select_all_key">PREF_SELECT_ALL_KEY</string>
    <string name="select_all_pref_title">Select All Songs</string>
    <string name="select_all_pref_summary">Select all the songs found on the url for download.
        If this setting is off, by default none is selected.</string>
    <string name="song_selection_category">Songs Selection Settings</string>
    <string name="last_fetched_url">Last Fetched Url\n(Click to fill the input box)</string>
    <string name="pref_default_songs_folder_key">PREF_DEFAULT_SONGS_FOLDER_KEY</string>
    <string name="pref_default_songs_folder_title">Download Folder</string>
    <string name="pref_default_songs_folder_summary">Choose the default folder for downloaded songs to be saved.
        \nCurrently selected folder is: </string>
    <string name="ic_settings_pathData">M19.43,12.98c0.04,-0.32 0.07,-0.64 0.07,-0.98s-0.03,-0.66 -0.07,-0.98l2.11,-1.65c0.19,-0.15 0.24,-0.42 0.12,-0.64l-2,-3.46c-0.12,-0.22 -0.39,-0.3 -0.61,-0.22l-2.49,1c-0.52,-0.4 -1.08,-0.73 -1.69,-0.98l-0.38,-2.65C14.46,2.18 14.25,2 14,2h-4c-0.25,0 -0.46,0.18 -0.49,0.42l-0.38,2.65c-0.61,0.25 -1.17,0.59 -1.69,0.98l-2.49,-1c-0.23,-0.09 -0.49,0 -0.61,0.22l-2,3.46c-0.13,0.22 -0.07,0.49 0.12,0.64l2.11,1.65c-0.04,0.32 -0.07,0.65 -0.07,0.98s0.03,0.66 0.07,0.98l-2.11,1.65c-0.19,0.15 -0.24,0.42 -0.12,0.64l2,3.46c0.12,0.22 0.39,0.3 0.61,0.22l2.49,-1c0.52,0.4 1.08,0.73 1.69,0.98l0.38,2.65c0.03,0.24 0.24,0.42 0.49,0.42h4c0.25,0 0.46,-0.18 0.49,-0.42l0.38,-2.65c0.61,-0.25 1.17,-0.59 1.69,-0.98l2.49,1c0.23,0.09 0.49,0 0.61,-0.22l2,-3.46c0.12,-0.22 0.07,-0.49 -0.12,-0.64l-2.11,-1.65zM12,15.5c-1.93,0 -3.5,-1.57 -3.5,-3.5s1.57,-3.5 3.5,-3.5 3.5,1.57 3.5,3.5 -1.57,3.5 -3.5,3.5z</string>
    <string name="nav_completed_downloads_title">Completed Downloads</string>
    <string name="nav_ongoing_downloads_title">Ongoing Downloads</string>
    <string name="downloads_nav_group_title">Downloads Info</string>
    <string name="artist_item_id">artist_item_id</string>
    <string name="album_item_id">album_item_id</string>
</resources>
